Fix horizontal scrollbar hiding under other widgets

--- a/packages/itwin/tree-widget/src/components/tree-header/TreeHeader.scss
+++ b/packages/itwin/tree-widget/src/components/tree-header/TreeHeader.scss
@@ -31,7 +31,6 @@
   align-items: center;
   height: var(--iui-size-xl);
   justify-content: space-between;
-  margin-bottom: var(--iui-size-xs);
 
   .tree-widget-search-box {
     height: calc(var(--iui-size-l) + var(--iui-size-3xs) * 3);
