--- a/packages/itwin/tree-widget/src/components/trees/VisibilityTreeBase.scss
+++ b/packages/itwin/tree-widget/src/components/trees/VisibilityTreeBase.scss
@@ -3,6 +3,19 @@
 * See LICENSE.md in the project root for license terms and full copyright notice.
 *--------------------------------------------------------------------------------------------*/
 
+.tree-widget-tree-with-header {
+  width: 100%;
+  height: 100%;
+
+  .tree-widget-tree-header {
+    height: var(--iui-size-xl);
+  }
+
+  .tree-widget-tree-content {
+    height: calc(100% - var(--iui-size-xl));
+  }
+}
+
 .tree-widget-visibility-tree-base {
   height: 100%;
   width: 100%;
@@ -60,11 +73,11 @@
 
       .visibility-tree-checkbox {
         &:disabled {
-          background-color: var(--iui-color-background);
+          background-color: transparent;
         }
 
         &:hover {
-          background-color: var(--iui-color-background-hover);
+          background-color: transparent;
         }
       }
     }
